@@ -1,3 +1,9 @@
+2007-06-14  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclCompile.c:	SetByteCodeFromAny() can no longer return
+	* generic/tclExecute.c:	any code other than TCL_OK, so remove code
+	* generic/tclProc.c:	that formerly handled exceptional codes.
+
 2007-06-13  Miguel Sofer  <msofer@users.sf.net>
 	
 	* generic/tclExecute.c (TclCompEvalObj): missed update to "there
